fixup! [WIP] add full implementation for step 7 (I think)

--- a/src/experiments_hw3.ipynb
+++ b/src/experiments_hw3.ipynb
@@ -1785,7 +1785,7 @@
     "    silhouette_paths: list[str],\n",
     "    scene_shape: tuple[int, int, int],\n",
     "    scene_dimensions: tuple[float, float, float],\n",
-    "    min_xyz_coordinates: np.ndarray[float, float, float],\n",
+    "    min_xyz_coordinates: np.ndarray,\n",
     "    debug_mode: bool = False,\n",
     ") -> np.ndarray:\n",
     "    \"\"\"\n",
@@ -2032,6 +2032,13 @@
     "\n",
     "    return rgb_colors\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
