--- a/src/experiments_hw3.ipynb
+++ b/src/experiments_hw3.ipynb
@@ -11,9 +11,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "# optional: allow Jupyter to \"hot reload\" the modules we import - after each change, rerun this cell (instead of restarting the kernel!!)\n",
     "%load_ext autoreload\n",
@@ -31,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +122,7 @@
        "         4.62931201e+00]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -184,14 +193,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "import glob\n",
     "\n",
     "cam_transform_paths = glob.glob(\"../dancer/calibration/*\")\n",
-    "silhouette_paths = glob.glob(\"../dancer/silh*\")"
+    "silhouette_paths = glob.glob(\"../dancer/silh*\")\n"
    ]
   },
   {
@@ -203,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +228,7 @@
        " '../dancer/silh_cam04_00023_0000008550.pbm']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -246,13 +255,41 @@
        " '../dancer/calibration/cam05.xml']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "cam_transform_paths"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['../dancer/cam02_00023_0000008550.png',\n",
+       " '../dancer/cam07_00023_0000008550.png',\n",
+       " '../dancer/cam03_00023_0000008550.png',\n",
+       " '../dancer/cam06_00023_0000008550.png',\n",
+       " '../dancer/cam05_00023_0000008550.png',\n",
+       " '../dancer/cam00_00023_0000008550.png',\n",
+       " '../dancer/cam04_00023_0000008550.png',\n",
+       " '../dancer/cam01_00023_0000008550.png']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rgb_paths = glob.glob(\"../dancer/cam*\")\n",
+    "rgb_paths"
    ]
   },
   {
@@ -264,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +469,7 @@
        "(numpy.ndarray, (50, 50, 50))"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +489,7 @@
        "150.0"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +525,7 @@
        "array([0., 1.])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -807,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1501,7 +1538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1510,7 +1547,7 @@
        "870"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1521,7 +1558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1530,7 +1567,7 @@
        "43.333333333333336"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1557,7 +1594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1627,7 +1664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1644,7 +1681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1769,11 +1806,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
     "import functools\n",
+    "from typing import Tuple\n",
     "\n",
     "import numpy as np\n",
     "from scipy import linalg as sci_alg\n",
@@ -1785,7 +1823,7 @@
     "    silhouette_paths: list[str],\n",
     "    scene_shape: tuple[int, int, int],\n",
     "    scene_dimensions: tuple[float, float, float],\n",
-    "    min_xyz_coordinates: np.ndarray[float, float, float],\n",
+    "    min_xyz_coordinates: np.ndarray[float],\n",
     "    debug_mode: bool = False,\n",
     ") -> np.ndarray:\n",
     "    \"\"\"\n",
@@ -1872,21 +1910,43 @@
     "        pixel_y = int(image_xy_homogenous[0, 1] // image_xy_homogenous[0, 2])\n",
     "        return pixel_x, pixel_y\n",
     "\n",
-    "    def _sample_coordinates(translation: np.ndarray, cam_center_coords_worldspace: np.ndarray, step_size: float) -> np.ndarray:\n",
+    "    def _sample_coordinates(\n",
+    "        translation: np.ndarray,\n",
+    "        cam_center_coords_worldspace: np.ndarray,\n",
+    "        step_size: float,\n",
+    "        voxel_size_xyz: np.ndarray,\n",
+    "    ) -> np.ndarray:\n",
     "        translation_magnitude = np.linalg.norm(translation)\n",
     "        num_steps = int(translation_magnitude / step_size)\n",
-    "        sampled_coordinates = []\n",
-    "        for i in range(num_steps + 1):  # Include the endpoint\n",
-    "            # Compute the coordinates of the sampled point\n",
-    "            sampled_point = cam_center_coords_worldspace + (translation * (i / num_steps))\n",
-    "            sampled_coordinates.append(sampled_point)\n",
-    "        sample_coordinates = np.asarray(sampled_coordinates)\n",
-    "        # for each step location, in XYZ\n",
-    "        sample_array_indices = np.apply_along_axis(\n",
+    "\n",
+    "        # Compute the world coordinates of the sampled point\n",
+    "        step_numbers = np.arange(num_steps + 1).reshape(-1, 1)  # include the endpoint\n",
+    "        sample_coordinates = np.apply_along_axis(\n",
+    "            lambda i: cam_center_coords_worldspace + (translation * (i / num_steps)),\n",
+    "            1,\n",
+    "            step_numbers,\n",
+    "        )\n",
+    "        if debug_mode:\n",
+    "            print(\n",
+    "                f\"Coordinates to sample along translation (worldspace): {sample_coordinates.shape}\"\n",
+    "            )\n",
+    "\n",
+    "        # convert to a representation that makes sense in the context of the voxel grid\n",
+    "        _convert_worldspace_to_index_location_simplified = functools.partial(\n",
     "            _convert_worldspace_to_index_location,\n",
+    "            voxel_size_xyz=voxel_size_xyz,\n",
+    "            min_world_xyz=min_xyz_coordinates,\n",
+    "        )\n",
+    "        sample_array_indices = np.apply_along_axis(\n",
+    "            _convert_worldspace_to_index_location_simplified,\n",
     "            1,\n",
     "            sample_coordinates,\n",
-    "        )\n",
+    "        ).squeeze()\n",
+    "        if debug_mode:\n",
+    "            print(\n",
+    "                f\"Coordinates to sample along translation (array space): {sample_array_indices.shape}\"\n",
+    "            )\n",
+    "\n",
     "        return sample_array_indices\n",
     "\n",
     "    def _bresenham_line(start_index: np.ndarray, end_index: np.ndarray) -> np.ndarray:\n",
@@ -1950,6 +2010,7 @@
     "    def _color_coordinate(\n",
     "            world_coordinate: np.ndarray,\n",
     "            step_size: float,\n",
+    "            voxel_size_xyz: np.ndarray,\n",
     "            frames_to_projection_and_images: dict[int, tuple[np.ndarray, np.ndarray, np.ndarray]],\n",
     "        ) -> np.ndarray:\n",
     "\n",
@@ -1969,7 +2030,12 @@
     "                cam_center_coords_worldspace = cam_center[0, :3] / cam_center[0, 3]\n",
     "                # compute the translation vector going from the XYZ point --> cam\n",
     "                translation = world_coordinate - cam_center_coords_worldspace  # (beware the order)!!!\n",
-    "                sample_array_indices = _sample_coordinates(translation, cam_center_coords_worldspace, step_size)\n",
+    "                sample_array_indices = _sample_coordinates(\n",
+    "                    translation,\n",
+    "                    cam_center_coords_worldspace,\n",
+    "                    step_size,\n",
+    "                    voxel_size_xyz,\n",
+    "                )\n",
     "                # search along the translation vector to check visibility\n",
     "                is_visible = True\n",
     "                for index in range(sample_array_indices.shape[0] - 1):\n",
@@ -2021,7 +2087,8 @@
     "    _color_coordinate_simplified = functools.partial(\n",
     "        _color_coordinate,\n",
     "        step_size=step_size,\n",
-    "        frames_to_projection_and_silhouette=frames_to_projection_and_images,\n",
+    "        frames_to_projection_and_images=frames_to_projection_and_images,\n",
+    "        voxel_size_xyz=voxel_size_xyz,\n",
     "    )\n",
     "\n",
     "    rgb_colors = np.apply_along_axis(\n",
@@ -2030,7 +2097,61 @@
     "        points_for_3d_model,\n",
     "    )\n",
     "\n",
-    "    return rgb_colors\n"
+    "    return rgb_colors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dimensions of ../dancer/silh_cam00_00023_0000008550.pbm: 582 x 780\n",
+      "Dimensions of ../dancer/cam00_00023_0000008550.png: 582 x 780 x 3\n",
+      "Dimensions of ../dancer/silh_cam01_00023_0000008550.pbm: 582 x 780\n",
+      "Dimensions of ../dancer/cam01_00023_0000008550.png: 582 x 780 x 3\n",
+      "Dimensions of ../dancer/silh_cam02_00023_0000008550.pbm: 582 x 780\n",
+      "Dimensions of ../dancer/cam02_00023_0000008550.png: 582 x 780 x 3\n",
+      "Dimensions of ../dancer/silh_cam03_00023_0000008550.pbm: 582 x 780\n",
+      "Dimensions of ../dancer/cam03_00023_0000008550.png: 582 x 780 x 3\n",
+      "Dimensions of ../dancer/silh_cam04_00023_0000008550.pbm: 582 x 780\n",
+      "Dimensions of ../dancer/cam04_00023_0000008550.png: 582 x 780 x 3\n",
+      "Dimensions of ../dancer/silh_cam05_00023_0000008550.pbm: 582 x 780\n",
+      "Dimensions of ../dancer/cam05_00023_0000008550.png: 582 x 780 x 3\n",
+      "Dimensions of ../dancer/silh_cam06_00023_0000008550.pbm: 582 x 780\n",
+      "Dimensions of ../dancer/cam06_00023_0000008550.png: 582 x 780 x 3\n",
+      "Dimensions of ../dancer/silh_cam07_00023_0000008550.pbm: 582 x 780\n",
+      "Dimensions of ../dancer/cam07_00023_0000008550.png: 582 x 780 x 3\n",
+      "Coordinates to sample along translation (worldspace): (25, 3)\n",
+      "Coordinates to sample along translation (array space): (25, 3)\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "true_colors = determine_rgb_colors(\n",
+    "    occupied_space,\n",
+    "    sorted(cam_transform_paths),\n",
+    "    sorted(rgb_paths),\n",
+    "    sorted(silhouette_paths),\n",
+    "    (X_RESOLUTION, Y_RESOLUTION, Z_RESOLUTION),\n",
+    "    (X_DISTANCE, Y_DISTANCE, Z_DISTANCE),\n",
+    "    np.array([X_MIN, Y_MIN, Z_MIN]),\n",
+    "    debug_mode=True,\n",
+    ")"
    ]
   },
   {
@@ -2057,7 +2178,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.1"
   }
  },
  "nbformat": 4,
