implement problem 1, part 2

--- a/src/experiments_hw4.ipynb
+++ b/src/experiments_hw4.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
     }
    ],
    "source": [
-    "depthmap_paths = [\n",
+    "depthmaps = [\n",
     "    ops.load_image(\n",
     "        path,\n",
     "        return_grayscale=True,\n",
@@ -177,6 +177,13 @@
    "metadata": {},
    "source": [
     "#### Determine Feature that Will Be Used to Fuse Point Clouds "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We begin by setting the hyperparameters given in in the hw 4 description:"
    ]
   },
   {
@@ -217,10 +224,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "NUM_FEATURES_TO_SELECT = 100"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then let's go ahead and apply the Harris Corner detector:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "path_to_image_and_corners = dict()\n",
     "\n",
     "detector = HarrisCornerDetector()\n",
-    "top_many_features = 100\n",
     "\n",
     "for rgb_path, image in zip(rgb_paths, illumination_images):\n",
     "\n",
@@ -234,10 +256,136 @@
     "    # pick top features\n",
     "    top_k_points = detector.pick_top_features(\n",
     "        corner_response,\n",
-    "        top_many_features\n",
+    "        NUM_FEATURES_TO_SELECT\n",
     "    )\n",
     "\n",
     "    path_to_image_and_corners[rgb_path] = (image, top_k_points)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 2: Corners to 3D Points"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We begin by setting the hyperparameters given in in the hw 4 description:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "S = 5000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "calibration_matrix = K = np.array([\n",
+    "    [525.,    0, 319.5],\n",
+    "    [0,    525., 239.5],\n",
+    "    [0,       0,     1]\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then we can project out the 3D points corresponding to the detected corners:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from numpy import linalg\n",
+    "\n",
+    "def convert_1_corner_to_3d(\n",
+    "        xy_and_depth: tuple[int, int, float],\n",
+    "        K: np.ndarray,\n",
+    "        S: int,\n",
+    "    ) -> np.ndarray:\n",
+    "    \"\"\"\n",
+    "    Follows the equation given in the hw 4 description.\n",
+    "\n",
+    "    Assumes the depth is not 0.\n",
+    "\n",
+    "    Parameters:\n",
+    "        xy_and_depth(tuple): pixel coordinates and depth\n",
+    "            of a detected corner\n",
+    "        K(np.ndarray): 3x3 camera intrinsic matrix\n",
+    "        S(int)\n",
+    "\n",
+    "    Returns: np.array - a row vector representing 3D worldspace\n",
+    "        coordinates of the corner\n",
+    "    \"\"\"\n",
+    "    x, y, depth_val = xy_and_depth\n",
+    "\n",
+    "    image_coordinates_homogenous = np.array([x, y, 1]).T\n",
+    "    worldspace_coordinates = (\n",
+    "        (1 / S)  * depth_val * (linalg.inv(K) @ image_coordinates_homogenous)\n",
+    "    )\n",
+    "\n",
+    "    assert worldspace_coordinates.shape == (3,)\n",
+    "\n",
+    "    return worldspace_coordinates.reshape(1, 3)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's apply this function across all the corners, in all the images:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path_to_3d_points = dict()\n",
+    "\n",
+    "for image_index, image_path in enumerate(rgb_paths):\n",
+    "\n",
+    "     # per image, convert appropiate corners to 3d points\n",
+    "     _, top_k_points = path_to_image_and_corners[image_path]\n",
+    "     top_k_points = top_k_points.astype(int)\n",
+    "     corresponding_depthmap = depthmaps[image_index]\n",
+    "     depth_vals = corresponding_depthmap[\n",
+    "          top_k_points[:, 0],\n",
+    "          top_k_points[:, 1]\n",
+    "     ].reshape(-1, 1)\n",
+    "\n",
+    "     world_space_coordinates_per_image = list()\n",
+    "\n",
+    "     for depth_val_index, depth_val in enumerate(depth_vals):\n",
+    "          if depth_val != 0:\n",
+    "               x, y = (\n",
+    "                    top_k_points[depth_val_index, 1],\n",
+    "                    top_k_points[depth_val_index, 0],\n",
+    "               )\n",
+    "               world_space_coord = convert_1_corner_to_3d(\n",
+    "                    (x, y, depth_val),\n",
+    "                    K,\n",
+    "                    S,\n",
+    "               )\n",
+    "               world_space_coordinates_per_image.append(world_space_coord)\n",
+    "\n",
+    "     path_to_3d_points[image_path] = np.asarray(world_space_coordinates_per_image)\n"
    ]
   },
   {
