implement problem 1, part 3

--- a/src/experiments_hw4.ipynb
+++ b/src/experiments_hw4.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,6 +386,170 @@
     "               world_space_coordinates_per_image.append(world_space_coord)\n",
     "\n",
     "     path_to_3d_points[image_path] = np.asarray(world_space_coordinates_per_image)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 3: Corner Matching"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Apply a Rank Transform to All of the Images\n",
+    "\n",
+    "Using 5x5 windows here:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from util.rank_transform import RankTransform2D"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "illumination_images_rank_transformed = [\n",
+    "    RankTransform2D.transform(image, filter_side_length=5)\n",
+    "    for image in illumination_images\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Data Wrangling\n",
+    "\n",
+    "I have a helper function to compute the putative correspondences. But it first requires us to associate the locations of the corners with their values in the corresponding rank transformed image (which I'm also referring to as its \"descriptor\" below):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "descriptors_of_all_images = dict()\n",
+    "\n",
+    "for image_index, image_path in enumerate(rgb_paths):\n",
+    "\n",
+    "    # per image, associate each corner location to its val in the rank transformed image\n",
+    "    _, top_k_points = path_to_image_and_corners[image_path]\n",
+    "    top_k_points = top_k_points.astype(int)\n",
+    "    corresponding_descriptor_image = illumination_images_rank_transformed[image_index]\n",
+    "\n",
+    "    descriptors_per_image = list()\n",
+    "\n",
+    "    for index_corner in np.arange(top_k_points.shape[0]):\n",
+    "        y, x = top_k_points[index_corner, :2]\n",
+    "        descriptors_per_image.append([\n",
+    "            y, x, np.array([corresponding_descriptor_image[y, x]])\n",
+    "        ])\n",
+    "\n",
+    "    descriptors_of_all_images[image_path] = descriptors_per_image\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Correspondence Search"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from util.ops import SimilarityMeasure"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "NUM_DESIRED_MATCHES = 10  # determined by the hw 4 description"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Images 2 and 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image2_corner_descriptors = descriptors_of_all_images[rgb_paths[1]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image1_corner_descriptors = descriptors_of_all_images[rgb_paths[0]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image_2_to_1_top_corner_matches = HarrisCornerDetector.compute_feature_correspondences(\n",
+    "    (image2_corner_descriptors, image1_corner_descriptors),\n",
+    "    desired_num_similarities=NUM_DESIRED_MATCHES,\n",
+    "    similarity_metric=SimilarityMeasure.SAD,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Images 2 and 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image3_corner_descriptors = descriptors_of_all_images[rgb_paths[2]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image_2_to_3_top_corner_matches = HarrisCornerDetector.compute_feature_correspondences(\n",
+    "    (image2_corner_descriptors, image3_corner_descriptors),\n",
+    "    desired_num_similarities=NUM_DESIRED_MATCHES,\n",
+    "    similarity_metric=SimilarityMeasure.SAD,\n",
+    ")"
    ]
   },
   {
