--- a/src/experiments_hw4.ipynb
+++ b/src/experiments_hw4.ipynb
@@ -1842,6 +1842,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.random.seed(42)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
