reintroduce randomness in sampling

--- a/src/experiments_hw4.ipynb
+++ b/src/experiments_hw4.ipynb
@@ -5710,6 +5710,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 5: Finis Coronat Opus\n",
+    "\n",
+    "\"The End Crowns the Work\""
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
