--- a/src/experiments_hw4.ipynb
+++ b/src/experiments_hw4.ipynb
@@ -5875,6 +5875,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Visual sanity check:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1;33m[Open3D WARNING] GLFW Error: Cocoa: Failed to find service port for display\u001b[0;m\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "# import open3d as o3d\n",
+    "# %matplotlib widget\n",
+    "\n",
+    "# point_cloud = o3d.io.read_point_cloud(\"./hw4_desk_point_cloud.ply\")\n",
+    "# o3d.visualization.draw_geometries([point_cloud])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "And that's problem 1!"
    ]
   },
@@ -5985,42 +6024,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 1: Compute 3D Points\n",
-    "\n",
-    "I assume we're going to use the same calibration matrix as for problem 1."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "xyz_points_problem2_image = list()\n",
-    "\n",
-    "y_vals = np.arange(rgb_problem2_gray_image.shape[0])\n",
-    "x_vals = np.arange(rgb_problem2_gray_image.shape[1])\n",
-    "\n",
-    "# for all pixels in the image\n",
-    "for x in x_vals:\n",
-    "    for y in y_vals:\n",
-    "        depth_val = depth_image2[y, x]\n",
-    "        if depth_val > 0:\n",
-    "            # Step 1: compute the 3d point for each pixel\n",
-    "            point_3d_in_image2 = convert_1_corner_to_3d(\n",
-    "                (x, y, depth_val),\n",
-    "                K,\n",
-    "                S\n",
-    "            )\n",
-    "            xyz_points_problem2_image.append(point_3d_in_image2.squeeze())\n",
-    "\n",
-    "xyz_points_problem2_image = np.row_stack(xyz_points_problem2_image)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Sliding Window Approach\n",
     "\n",
     "Here we try to compute the normal image for the given RGB image, given the depth map and the camera parameters provided in problem 1.\n",
@@ -6069,7 +6072,7 @@
     "import itertools\n",
     "\n",
     "def compute_normal(\n",
-    "        depth_image,\n",
+    "        depth_image: np.ndarray,\n",
     "        kernel: np.ndarray,\n",
     "        starting_row_index: int,\n",
     "        starting_col_index: int,\n",
@@ -6080,21 +6083,52 @@
     "        do_normal_negation: bool = False,\n",
     "        debug_mode: bool = False,\n",
     "    ) -> np.ndarray:\n",
-    "    \"\"\"\"\"\"\n",
+    "    \"\"\"\n",
+    "    For a pixel, compute the normal of the plane that passes through corresponding 3D point.\n",
     "\n",
+    "    Parameters:\n",
+    "        depth_image(array-like): grayscale image that should be the\n",
+    "            same size as the original RGB image. Padding should be done\n",
+    "            before you pass it to this function.\n",
+    "        kernel(array-like): a square matrix of odd length that defines how\n",
+    "            big of a window to use when estimating the plane passing through\n",
+    "            the 3D point.\n",
+    "        starting_row_index, starting_col_index(int, int): the coordinates of\n",
+    "            the upper left corner of the window, in the image\n",
+    "        K(array-like): 3x3 camera intrinsic parameters\n",
+    "        S(int): another parameter needed for conversion from 2D to 3D\n",
+    "        sample_size_for_normal_estimation(int): number of points used to\n",
+    "            estimate the plane\n",
+    "        dtype(numpy.dtype): determines what range of values that the components of\n",
+    "            the normal vector will be squeezed into (as they are meant to be rendered later)\n",
+    "        do_normal_negation(bool): simple yet flawed hack you can use to maybe\n",
+    "            improve the stability of the normal image\n",
+    "        debug_mode(bool): enable logging of execution information in real-time\n",
+    "\n",
+    "    Returns: np.ndarray: a vector of shape (3,) representing the normal vector for\n",
+    "        a single pixel in the input image\n",
+    "    \"\"\"\n",
     "    ### HELPER\n",
     "    def _map_normal_to_pixel_range(\n",
     "            normal_vector: np.ndarray,\n",
-    "            dtype: np.dtype,\n",
     "        ) -> np.ndarray:\n",
-    "        \"\"\"Assign an RGB value to a *single* pixel location, based on a normal with unit magnitude.\"\"\"\n",
+    "        \"\"\"\n",
+    "        Assign an RGB value to a *single* pixel location\n",
+    "\n",
+    "        Parameter:\n",
+    "            normal_vector(np.ndarray): a row vector with 3 elements.\n",
+    "                Assumed to have a magnitude of 1\n",
+    "\n",
+    "        Returns: np.ndarray: a 3d row vector that's equivalent to the\n",
+    "            normal vector, but is scaled appropiatedly to fit into the\n",
+    "            range of values that the given `dtype` supports\n",
+    "        \"\"\"\n",
     "        max_pixel_value = np.iinfo(dtype).max  # 255 if using uint8\n",
     "        rgb = ((normal_vector / 2) + np.array([0.5, 0.5, 0.5])) * max_pixel_value\n",
     "        return rgb\n",
     "\n",
     "    ### DRIVER\n",
-    "    # compute 3D point for all the pixels in the window\n",
-    "    # points_3d = list()\n",
+    "    # compute a 3D point for all the pixels in the window\n",
     "    points_2d_to_3d = dict()  # will use later to select 3 non-colinear points\n",
     "    for y in np.arange(starting_row_index, starting_row_index + kernel.shape[0]).astype(int):\n",
     "        for x in np.arange(starting_col_index, starting_col_index + kernel.shape[1]).astype(int):\n",
@@ -6126,8 +6160,6 @@
     "\n",
     "    if debug_mode:\n",
     "        print(f\"DEBUG: check all 2D -> 3D point mappings: {points_2d_to_3d}\")\n",
-    "    # center_point_3d = points_2d_to_3d[center_point_2d]\n",
-    "    # del points_2d_to_3d[center_point_2d]\n",
     "\n",
     "    all_potential_point_selections = itertools.combinations(\n",
     "        list(points_2d_to_3d.keys()),\n",
@@ -6304,6 +6336,13 @@
     "plt.title(\"Second Normal Image (Normal Negation Enabled)\")\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And that's problem 2!"
+   ]
   }
  ],
  "metadata": {
@@ -6322,7 +6361,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
