relocate teddy dataset

--- a/src/experiments_hw2.ipynb
+++ b/src/experiments_hw2.ipynb
@@ -54,13 +54,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dimensions of ./teddy/teddyL.pgm: 375 x 450\n"
+      "Dimensions of ../datasets/teddy/teddyL.pgm: 375 x 450\n"
      ]
     }
    ],
    "source": [
     "left_img = ops.load_image(\n",
-    "    \"./teddy/teddyL.pgm\",\n",
+    "    \"../datasets/teddy/teddyL.pgm\",\n",
     "    return_grayscale=True,\n",
     "    return_array=True,\n",
     ")"
@@ -75,13 +75,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dimensions of ./teddy/teddyR.pgm: 375 x 450\n"
+      "Dimensions of ../datasets/teddy/teddyR.pgm: 375 x 450\n"
      ]
     }
    ],
    "source": [
     "right_img = ops.load_image(\n",
-    "    \"./teddy/teddyR.pgm\",\n",
+    "    \"../datasets/teddy/teddyR.pgm\",\n",
     "    return_grayscale=True,\n",
     "    return_array=True,\n",
     ")"
@@ -96,13 +96,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dimensions of ./teddy/disp2.pgm: 375 x 450\n"
+      "Dimensions of ../datasets/teddy/disp2.pgm: 375 x 450\n"
      ]
     }
    ],
    "source": [
     "teddy_disparity_map = ops.load_image(\n",
-    "    \"./teddy/disp2.pgm\",\n",
+    "    \"../datasets/teddy/disp2.pgm\",\n",
     "    return_grayscale=True,\n",
     "    return_array=True,\n",
     ")"
